--- a/assets/styles.css
+++ b/assets/styles.css
@@ -368,3 +368,12 @@ footer {
   padding: 15px 0;
   margin-top: auto;
 }
+
+
+.word {
+    cursor: pointer;
+    color: blue;
+}
+.word.clicked {
+    color: red;
+}
